--- a/Cartes/carteFrançais.html
+++ b/Cartes/carteFrançais.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/style.css" />
 
   <title>ohmyfood</title>
-  <!--################################## FRANCAISE ##################################-->
+<!--################################## FRANCAISE ##################################-->
 </head>
 
 <body>
@@ -25,7 +25,7 @@
       alt="menu à la française" />
   </header>
 
-  <!-- Menu  -->
+<!--################################## MENU ##################################-->
 
   <section class="page_menu">
     <div class="page_menu_titre">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </section>
-  <!-- Entrées -->
+<!--################################## ENTREES ##################################-->
   <div class="compo">
     <article class="compo_menu">
       <h4 class="compo_menu_titre">ENTRÉES</h4>
@@ -83,7 +83,7 @@
       </div>
     </article>
 
-    <!-- Plats -->
+<!--################################## PLATS ##################################-->
 
     <article class="compo_menu">
       <h4 class="compo_menu_titre">PLATS</h4>
@@ -134,7 +134,7 @@
       </div>
     </article>
 
-    <!-- Dessert -->
+<!--################################## DESSERTS ##################################-->
 
     <article class="compo_menu">
       <h4 class="compo_menu_titre">DESSERTS</h4>
@@ -183,6 +183,7 @@
   <div class="commande">
     <input class="btn" type="button" value="Commander" />
   </div>
+<!--################################## FOOTERT ##################################-->
   <footer>
     <div class="logo_footer">
       <h2>ohmyfood</h2>
