--- a/Cartes/carteLaNoteEnchantee.html
+++ b/Cartes/carteLaNoteEnchantee.html
@@ -12,13 +12,210 @@
   <link rel="stylesheet" href="../css/style.css" />
 
   <title>ohmyfood</title>
-  <!-- Page La note enchantée -->
+<!--################################## LA NOTE ENCHANTEE ##################################-->
 </head>
 
 <body>
   <header>
+    <div class="logo">
+      <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+      <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+    </div>
+    <img class="image_menu" src="../Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu la Note enchantée" />
   </header>
+
+<!--################################## MENU ##################################-->
+
+  <section class="page_menu">
+    <div class="page_menu_titre">
+      <h1>La note enchantée</h1>
+      <div class="like">
+        <i class="far fa-heart like"></i>
+        <i class="fas fa-heart like"></i>
+      </div>
+    </div>
+  </section>
+<!--################################## ENTREES ##################################-->
+  <div class="compo">
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">ENTRÉES</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Ravioles de foie gras</p>
+          <p class="compo_menu_accompagnement">
+            Accompagnés de leur crème à la truffe
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">25€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Caviar osciètre</p>
+          <p class="compo_menu_accompagnement">
+            Sur blini à la farine de blé noir
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">35€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Homard et espuma de potiron</p>
+          <p class="compo_menu_accompagnement">Mariné aux zestes d'orange</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">20€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Foie gras de canard cuit entier</p>
+          <p class="compo_menu_accompagnement">
+            Confiture de figue et pain toasté
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">35€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+
+<!--################################## PLATS ##################################-->
+
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">PLATS</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Noix de coquilles Saint-Jacques</p>
+          <p class="compo_menu_accompagnement">
+            Sur lit de purée de céleri-rave
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">40€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Langoustine poêlée</p>
+          <p class="compo_menu_accompagnement">Purée de patate douce</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">35€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Mijoté de queue de boeuf</p>
+          <p class="compo_menu_accompagnement">
+            Et riz sauvage aux zestes de citron
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">44€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+
+<!--################################## DESSERTS ##################################-->
+
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">DESSERTS</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Macaron noisette et chocolat</p>
+          <p class="compo_menu_accompagnement">
+            Glace au caramel brun et sel de Guérande
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">18€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Baba au rhum revisité</p>
+          <p class="compo_menu_accompagnement">Avec son coulis de citron</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">22€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Tarte au citron meringuée</p>
+          <p class="compo_menu_accompagnement">Déstructurée</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">23€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+
+  </div>
+  <div class="commande">
+    <input class="btn" type="button" value="Commander" />
+  </div>
+<!--################################## FOOTERT ##################################-->
   <footer>
+        <div class="logo_footer">
+      <h2>ohmyfood</h2>
+    </div>
+    <div>
+      <ul>
+        <li>
+          <a href="#"><i class="life fas fa-utensils"></i>Proposer un restaurant</a>
+        </li>
+        <li>
+          <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+        </li>
+        <li><a href="#"> Mentions Légales</a></li>
+        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 
