--- a/Cartes/carteLeDeliceDesSens.html
+++ b/Cartes/carteLeDeliceDesSens.html
@@ -2,13 +2,200 @@
 <html lang="en">
 
 <head>
-  <!-- page Le délice des sens -->
+    <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../css/style.css" />
+
+  <title>ohmyfood</title>
+<!--################################## LE DELICE DES SENS ##################################-->
 </head>
 
 <body>
   <header>
+    <div class="logo">
+      <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+      <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+    </div>
+    <img class="image_menu" src="../Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+      alt="menu le délice des sens" />
   </header>
+
+<!--################################## MENU ##################################-->
+
+  <section class="page_menu">
+    <div class="page_menu_titre">
+      <h1>Le délice des sens</h1>
+      <div class="like">
+        <i class="far fa-heart like"></i>
+        <i class="fas fa-heart like"></i>
+      </div>
+    </div>
+  </section>
+
+<!--################################## ENTREES ##################################-->
+  <div class="compo">
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">ENTRÉES</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Tartare de thon</p>
+          <p class="compo_menu_accompagnement">Assaisonné au yuzu</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">25€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Bouchée de homard croustillant</p>
+          <p class="compo_menu_accompagnement">
+            Et sa farandole de petits légumes
+          </p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">35€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Velouté de cèpes</p>
+          <p class="compo_menu_accompagnement">Aux truffes</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">20€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+
+<!--################################## PLATS ##################################-->
+
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">PLATS</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Poulet rôti aux herbes de Provence</p>
+          <p class="compo_menu_accompagnement">Et sa crème de truffe</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">40€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Langouste rôtie</p>
+          <p class="compo_menu_accompagnement">Et ses légumes de saison</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">35€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Côte de boeuf Angus</p>
+          <p class="compo_menu_accompagnement">Et sa purée de panais</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">44€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+
+<!--################################## DESSERTS ##################################-->
+
+    <article class="compo_menu">
+      <h4 class="compo_menu_titre">DESSERTS</h4>
+      <hr />
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Farandole de desserts</p>
+          <p class="compo_menu_accompagnement">Du chef</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">18€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Crème brulée</p>
+          <p class="compo_menu_accompagnement">Revisitée</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">22€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="compo_menu_texte">
+        <div class="compo_menu_carte">
+          <p class="compo_menu_choix">Tiramisu</p>
+          <p class="compo_menu_accompagnement">À la noisette</p>
+        </div>
+        <div class="compo_menu_check">
+          <p class="compo_menu_check_prix">23€</p>
+          <div class="compo_menu_check_icon">
+            <i class="fas fa-check"></i>
+          </div>
+        </div>
+      </div>
+    </article>
+  </div>
+
+  <div class="commande">
+    <input class="btn" type="button" value="Commander" />
+  </div>
+
+<!--################################## FOOTER ##################################-->
   <footer>
+    <div class="logo_footer">
+      <h2>ohmyfood</h2>
+    </div>
+    <div>
+      <ul>
+        <li>
+          <a href="#"><i class="life fas fa-utensils"></i>Proposer un restaurant</a>
+        </li>
+        <li>
+          <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+        </li>
+        <li><a href="#"> Mentions Légales</a></li>
+        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 
