--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
     </div>
 
     <!--################################# fORMULAIRE #################################-->
@@ -57,7 +57,7 @@
 
   <!--################################################# RESTAURANTS #################################################-->
   <section class="section_picture">
-    <h2>Restaurant</h2>
+    <h2>Restaurants</h2>
     <figure class="menu_1">
       <div class="nouveau">
         <p>Nouveau</p>
