--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+    <div class="loader">
+      <div class="loading">Ohmyfood<i class="fas fa-utensils"></i></div>
+      <div class="animForm">
+        <div class="drop1"></div>
+        <div class="drop2"></div>
+        <div class="drop3"></div>
+      </div>
+    </div>
+
   <header>
     <div class="logo">
       <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
