Animation des btn like

--- a/Cartes/cartePaletteDuGout.html
+++ b/Cartes/cartePaletteDuGout.html
@@ -192,6 +192,21 @@
   <!--################################## FOOTER ##################################-->
   
   <footer>
+    <div class="logo_footer">
+      <h2>ohmyfood</h2>
+    </div>
+    <div>
+      <ul>
+        <li>
+          <a href="#"><i class="life fas fa-utensils"></i>Proposer un restaurant</a>
+        </li>
+        <li>
+          <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+        </li>
+        <li><a href="#"> Mentions Légales</a></li>
+        <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 
