Rationalisation des menus

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!--################################################# RESTAURANTS #################################################-->
   <section class="section_picture">
     <h2>Restaurants</h2>
-    <figure class="menu_1">
+    <figure class="menu">
       <div class="nouveau">
         <p>Nouveau</p>
       </div>
@@ -75,7 +75,7 @@
         <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
           alt="Ménilmontant" />
         <div class="picture_text">
-          <h3>Lapalette du goût</h3>
+          <h3>La palette du goût</h3>
           <p>Ménilmontant</p>
         </div>
       </a>
@@ -85,7 +85,7 @@
       </div>
     </figure>
 
-    <figure class="menu_2">
+    <figure class="menu">
       <a href="Cartes/carteLaNoteEnchantee.html">
         <div class="nouveau">
           <p>Nouveau</p>
@@ -102,7 +102,7 @@
       </div>
     </figure>
 
-    <figure class="menu_3">
+    <figure class="menu">
       <a href="Cartes/carteFrançais.html">
         <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Cité Rouge" />
         <div class="picture_text">
@@ -116,7 +116,7 @@
       </div>
     </figure>
 
-    <figure class="menu_4">
+    <figure class="menu">
       <a href="Cartes/carteLeDeliceDesSens.html">
         <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
           alt="Folie-Méricourt" />
