Mise à niveau des menus

--- a/Cartes/cartePaletteDuGout.html
+++ b/Cartes/cartePaletteDuGout.html
@@ -198,9 +198,6 @@
   <!--################################## FOOTER ##################################-->
   
   <footer>
-    <div class="logo_footer">
-      <h2>ohmyfood</h2>
-    </div>
     <div>
       <ul>
         <li>
@@ -211,6 +208,7 @@
         </li>
         <li><a href="#"> Mentions Légales</a></li>
         <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        <li><a class="logo_footer"> ohmyfood</a></li> 
       </ul>
     </div>
   </footer>
