--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </figure>
 
     <figure class="menu">
-      <a href="Cartes/carteFrançais.html">
+      <a href="Cartes/carteFrancais.html">
         <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Cité Rouge" />
         <div class="picture_text">
           <h3>A la francaise</h3>
@@ -133,9 +133,6 @@
   </section>
   <!--################################# FOOTER #################################-->
   <footer>
-    <div class="logo_footer">
-      <h2>ohmyfood</h2>
-    </div>
     <div>
       <ul>
         <li>
@@ -146,6 +143,7 @@
         </li>
         <li><a href="#"> Mentions Légales</a></li>
         <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        <li><a class="logo_footer"> ohmyfood</a></li> 
       </ul>
     </div>
   </footer>
