--- a/Cartes/carteFrancais.html
+++ b/Cartes/carteFrancais.html
@@ -191,9 +191,6 @@
   </div>
 <!--################################## FOOTERT ##################################-->
   <footer>
-    <div class="logo_footer">
-      <h2>ohmyfood</h2>
-    </div>
     <div>
       <ul>
         <li>
@@ -204,6 +201,7 @@
         </li>
         <li><a href="#"> Mentions Légales</a></li>
         <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+        <li><a class="logo_footer"> ohmyfood</a></li> 
       </ul>
     </div>
   </footer>
