Revision du code et de la structure HTML. Reste à revoir la partie mobil pour centrage des menus

--- a/Cartes/carteLeDeliceDesSens.html
+++ b/Cartes/carteLeDeliceDesSens.html
@@ -41,45 +41,46 @@
   <div class="compo">
     <article class="compo_menu">
       <div class="compo_menu_entree">
-        <h4 class="compo_menu_titre">ENTRÉES</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Tartare de thon</p>
-            <p class="compo_menu_accompagnement">Assaisonné au yuzu</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">25€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>ENTRÉES</h4>      
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Tartare de thon</p>
+              <p class="compo_menu_accompagnement">Assaisonné au yuzu</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">25€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Bouchée de homard croustillant</p>
-            <p class="compo_menu_accompagnement">
-              Et sa farandole de petits légumes
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Bouchée de homard croustillant</p>
+              <p class="compo_menu_accompagnement">
+                Et sa farandole de petits légumes
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Velouté de cèpes</p>
-            <p class="compo_menu_accompagnement">Aux truffes</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">20€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Velouté de cèpes</p>
+              <p class="compo_menu_accompagnement">Aux truffes</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">20€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -90,46 +91,47 @@
 
     <article class="compo_menu">
       <div class="compo_menu_plat">
-        <h4 class="compo_menu_titre">PLATS</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Poulet rôti aux herbes de Provence</p>
-            <p class="compo_menu_accompagnement">Et sa crème de truffe</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">40€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>PLATS</h4>       
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Poulet rôti aux herbes de Provence</p>
+              <p class="compo_menu_accompagnement">Et sa crème de truffe</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">40€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Langouste rôtie</p>
-            <p class="compo_menu_accompagnement">Et ses légumes de saison</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Langouste rôtie</p>
+              <p class="compo_menu_accompagnement">Et ses légumes de saison</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Côte de boeuf Angus</p>
-            <p class="compo_menu_accompagnement">Et sa purée de panais</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">44€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Côte de boeuf Angus</p>
+              <p class="compo_menu_accompagnement">Et sa purée de panais</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">44€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </div>  
       </div>  
     </article>
 
@@ -137,43 +139,44 @@
 
     <article class="compo_menu">
       <div class="compo_menu_dessert">
-        <h4 class="compo_menu_titre">DESSERTS</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Farandole de desserts</p>
-            <p class="compo_menu_accompagnement">Du chef</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">18€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">  
+          <h4>DESSERTS</h4>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Farandole de desserts</p>
+              <p class="compo_menu_accompagnement">Du chef</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">18€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Crème brulée</p>
-            <p class="compo_menu_accompagnement">Revisitée</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">22€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Crème brulée</p>
+              <p class="compo_menu_accompagnement">Revisitée</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">22€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Tiramisu</p>
-            <p class="compo_menu_accompagnement">À la noisette</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">23€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Tiramisu</p>
+              <p class="compo_menu_accompagnement">À la noisette</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">23€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
         </div>
