--- a/Cartes/carteFrancais.html
+++ b/Cartes/carteFrancais.html
@@ -40,45 +40,46 @@
   <div class="compo">
     <article class="compo_menu">
       <div class="compo_menu_entree">
-        <h4 class="compo_menu_titre">ENTRÉES</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Tartare de poulpe acidulé</p>
-            <p class="compo_menu_accompagnement">Aux zests d'orange</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">25€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>ENTRÉES</h4>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Tartare de poulpe acidulé</p>
+              <p class="compo_menu_accompagnement">Aux zests d'orange</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">25€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Velouté de légumes d'antan</p>
-            <p class="compo_menu_accompagnement">
-              Carotte, panais, topinambour
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Velouté de légumes d'antan</p>
+              <p class="compo_menu_accompagnement">
+                Carotte, panais, topinambour
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Soupe à l'oignon</p>
-            <p class="compo_menu_accompagnement">Revisitée</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">20€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Soupe à l'oignon</p>
+              <p class="compo_menu_accompagnement">Revisitée</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">20€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -89,52 +90,54 @@
 
     <article class="compo_menu">
       <div class="compo_menu_plat">
-        <h4 class="compo_menu_titre">PLATS</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Coquilles Saint-Jacques</p>
-            <p class="compo_menu_accompagnement">
-              Accompagnées d'une purée de panais
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">40€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>PLATS</h4>
+        
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Coquilles Saint-Jacques</p>
+              <p class="compo_menu_accompagnement">
+                Accompagnées d'une purée de panais
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">40€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Magret de canard</p>
-            <p class="compo_menu_accompagnement">
-              Et parmentier de pommes de terre
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Magret de canard</p>
+              <p class="compo_menu_accompagnement">
+                Et parmentier de pommes de terre
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Pigeonneau d’Ille-et-Vilaine</p>
-            <p class="compo_menu_accompagnement">
-              Sur son lit de gnocchis aux légumes
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">44€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Pigeonneau d’Ille-et-Vilaine</p>
+              <p class="compo_menu_accompagnement">
+                Sur son lit de gnocchis aux légumes
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">44€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </div>    
       </div>
     </article>
 
@@ -142,43 +145,44 @@
 
     <article class="compo_menu">
       <div class="compo_menu_dessert">
-        <h4 class="compo_menu_titre">DESSERTS</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Pétales de violettes glacés</p>
-            <p class="compo_menu_accompagnement">Et purée de noisettes</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">18€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>DESSERTS</h4>          
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Pétales de violettes glacés</p>
+              <p class="compo_menu_accompagnement">Et purée de noisettes</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">18€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Fondant au chocolat</p>
-            <p class="compo_menu_accompagnement">Revisité</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">22€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Fondant au chocolat</p>
+              <p class="compo_menu_accompagnement">Revisité</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">22€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Millefeuille croustillant</p>
-            <p class="compo_menu_accompagnement">Myrtilles et pâte d’amande</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">23€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Millefeuille croustillant</p>
+              <p class="compo_menu_accompagnement">Myrtilles et pâte d’amande</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">23€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
         </div>  
