--- a/Cartes/carteLaNoteEnchantee.html
+++ b/Cartes/carteLaNoteEnchantee.html
@@ -39,65 +39,66 @@
   <div class="compo">
     <article class="compo_menu">
       <div class="compo_menu_entree">
-        <h4 class="compo_menu_titre">ENTRÉES</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Ravioles de foie gras</p>
-            <p class="compo_menu_accompagnement">
-              Accompagnés de leur crème à la truffe
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">25€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">  
+          <h4>ENTRÉES</h4>          
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Ravioles de foie gras</p>
+              <p class="compo_menu_accompagnement">
+                Accompagnés de leur crème à la truffe
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">25€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Caviar osciètre</p>
-            <p class="compo_menu_accompagnement">
-              Sur blini à la farine de blé noir
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Caviar osciètre</p>
+              <p class="compo_menu_accompagnement">
+                Sur blini à la farine de blé noir
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Homard et espuma de potiron</p>
-            <p class="compo_menu_accompagnement">Mariné aux zestes d'orange</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">20€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Homard et espuma de potiron</p>
+              <p class="compo_menu_accompagnement">Mariné aux zestes d'orange</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">20€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Foie gras de canard cuit entier</p>
-            <p class="compo_menu_accompagnement">
-              Confiture de figue et pain toasté
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Foie gras de canard cuit entier</p>
+              <p class="compo_menu_accompagnement">
+                Confiture de figue et pain toasté
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </div>  
       </div>
     </article>
 
@@ -105,47 +106,48 @@
 
     <article class="compo_menu">
       <div class="compo_menu_plat">
-        <h4 class="compo_menu_titre">PLATS</h4>
-        <hr />
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Noix de coquilles Saint-Jacques</p>
-            <p class="compo_menu_accompagnement">
-              Sur lit de purée de céleri-rave
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">40€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>PLATS</h4>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Noix de coquilles Saint-Jacques</p>
+              <p class="compo_menu_accompagnement">
+                Sur lit de purée de céleri-rave
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">40€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Langoustine poêlée</p>
-            <p class="compo_menu_accompagnement">Purée de patate douce</p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">35€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Langoustine poêlée</p>
+              <p class="compo_menu_accompagnement">Purée de patate douce</p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">35€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="compo_menu_texte">
-          <div class="compo_menu_carte">
-            <p class="compo_menu_choix">Mijoté de queue de boeuf</p>
-            <p class="compo_menu_accompagnement">
-              Et riz sauvage aux zestes de citron
-            </p>
-          </div>
-          <div class="compo_menu_check">
-            <p class="compo_menu_check_prix">44€</p>
-            <div class="compo_menu_check_icon">
-              <i class="fas fa-check"></i>
+          <div class="compo_menu_texte">
+            <div class="compo_menu_carte">
+              <p class="compo_menu_choix">Mijoté de queue de boeuf</p>
+              <p class="compo_menu_accompagnement">
+                Et riz sauvage aux zestes de citron
+              </p>
+            </div>
+            <div class="compo_menu_check">
+              <p class="compo_menu_check_prix">44€</p>
+              <div class="compo_menu_check_icon">
+                <i class="fas fa-check"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -156,48 +158,49 @@
 
     <article class="compo_menu">
       <div class="compo_menu_dessert">
-        <h4 class="compo_menu_titre">DESSERTS</h4>
-        <hr />
-          <div class="compo_menu_texte">
-            <div class="compo_menu_carte">
-              <p class="compo_menu_choix">Macaron noisette et chocolat</p>
-              <p class="compo_menu_accompagnement">
-                Glace au caramel brun et sel de Guérande
-              </p>
-            </div>
-            <div class="compo_menu_check">
-              <p class="compo_menu_check_prix">18€</p>
-              <div class="compo_menu_check_icon">
-                <i class="fas fa-check"></i>
+        <div class="compo_menu_titre">
+          <h4>DESSERTS</h4>
+            <div class="compo_menu_texte">
+              <div class="compo_menu_carte">
+                <p class="compo_menu_choix">Macaron noisette et chocolat</p>
+                <p class="compo_menu_accompagnement">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+              </div>
+              <div class="compo_menu_check">
+                <p class="compo_menu_check_prix">18€</p>
+                <div class="compo_menu_check_icon">
+                  <i class="fas fa-check"></i>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="compo_menu_texte">
-            <div class="compo_menu_carte">
-              <p class="compo_menu_choix">Baba au rhum revisité</p>
-              <p class="compo_menu_accompagnement">Avec son coulis de citron</p>
-            </div>
-            <div class="compo_menu_check">
-              <p class="compo_menu_check_prix">22€</p>
-              <div class="compo_menu_check_icon">
-                <i class="fas fa-check"></i>
+            <div class="compo_menu_texte">
+              <div class="compo_menu_carte">
+                <p class="compo_menu_choix">Baba au rhum revisité</p>
+                <p class="compo_menu_accompagnement">Avec son coulis de citron</p>
+              </div>
+              <div class="compo_menu_check">
+                <p class="compo_menu_check_prix">22€</p>
+                <div class="compo_menu_check_icon">
+                  <i class="fas fa-check"></i>
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="compo_menu_texte">
-            <div class="compo_menu_carte">
-              <p class="compo_menu_choix">Tarte au citron meringuée</p>
-              <p class="compo_menu_accompagnement">Déstructurée</p>
-            </div>
-            <div class="compo_menu_check">
-              <p class="compo_menu_check_prix">23€</p>
-              <div class="compo_menu_check_icon">
-                <i class="fas fa-check"></i>
+            <div class="compo_menu_texte">
+              <div class="compo_menu_carte">
+                <p class="compo_menu_choix">Tarte au citron meringuée</p>
+                <p class="compo_menu_accompagnement">Déstructurée</p>
+              </div>
+              <div class="compo_menu_check">
+                <p class="compo_menu_check_prix">23€</p>
+                <div class="compo_menu_check_icon">
+                  <i class="fas fa-check"></i>
+                </div>
               </div>
             </div>
-          </div>
+        </div>    
       </div>
     </article>
 
