--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css" />
-
-  <title></title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Ohmyfood</title>
 </head>
 
 <body>
@@ -26,22 +24,19 @@
 
   <header>
     <div class="logo">
-      <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <img src="../Images-textes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </div>
-
-    <!--################################# fORMULAIRE #################################-->
-
     <form action="#">
       <div class="nav-container">
         <i class="fas fa-map-marker-alt"></i>
-        <input class="search" type="search" placeholder="Paris,Belleville" name="the_search" />
+        <input class="search" type="search" placeholder="Paris,Belleville" name="the_search">
       </div>
       <div class="nav_container_text">
         <h1>Réservez le menu qui vous convient</h1>
         <p>
           Découvrez des restaurants d'exception, séléctionnés par nos soins.
         </p>
-        <input class="btn" type="button" value="Explorer nos restaurants" />
+        <input class="btn" type="button" value="Explorer nos restaurants">
       </div>
     </form>
 
@@ -72,8 +67,7 @@
         <p>Nouveau</p>
       </div>
       <a href="Cartes/cartePaletteDuGout.html">
-        <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-          alt="Ménilmontant" />
+        <img class="picture_index" src="./Images-textes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Ménilmontant">
         <div class="picture_text">
           <h3>La palette du goût</h3>
           <p>Ménilmontant</p>
@@ -90,7 +84,7 @@
         <div class="nouveau">
           <p>Nouveau</p>
         </div>
-        <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Charonne" />
+        <img class="picture_index" src="./Images-textes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Charonne">
         <div class="picture_text">
           <h3>La note enchantée</h3>
           <p>Charonne</p>
@@ -104,7 +98,7 @@
 
     <figure class="menu">
       <a href="Cartes/carteFrancais.html">
-        <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Cité Rouge" />
+        <img class="picture_index" src="./Images-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Cité Rouge">
         <div class="picture_text">
           <h3>A la francaise</h3>
           <p>Cité Rouge</p>
@@ -118,8 +112,7 @@
 
     <figure class="menu">
       <a href="Cartes/carteLeDeliceDesSens.html">
-        <img class="picture_index" src="./Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-          alt="Folie-Méricourt" />
+        <img class="picture_index" src="./Images-textes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Folie-Méricourt">
         <div class="picture_text">
           <h3>Le délice des sens</h3>
           <p>Folie-Méricourt</p>
