--- a/Cartes/carteFrancais.html
+++ b/Cartes/carteFrancais.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../css/style.css" />
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
 
   <title>ohmyfood</title>
 <!--################################## FRANCAISE ##################################-->
@@ -19,10 +19,10 @@
   <header>
     <div class="logo">
       <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-      <img src="../Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <img src="../Images-textes-Ohmyfood/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </div>
-    <img class="image_menu" src="../Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-      alt="menu à la française" />
+    <img class="image_menu" src="../Images-textes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+      alt="menu à la française">
   </header>
 
 <!--################################## MENU ##################################-->
@@ -41,7 +41,7 @@
     <article class="compo_menu">
       <div class="compo_menu_entree">
         <div class="compo_menu_titre">
-          <h4>ENTRÉES</h4>
+          <h2>ENTRÉES</h2>
           <div class="compo_menu_texte">
             <div class="compo_menu_carte">
               <p class="compo_menu_choix">Tartare de poulpe acidulé</p>
@@ -91,7 +91,7 @@
     <article class="compo_menu">
       <div class="compo_menu_plat">
         <div class="compo_menu_titre">
-          <h4>PLATS</h4>
+          <h2>PLATS</h2>
         
           <div class="compo_menu_texte">
             <div class="compo_menu_carte">
@@ -146,7 +146,7 @@
     <article class="compo_menu">
       <div class="compo_menu_dessert">
         <div class="compo_menu_titre">
-          <h4>DESSERTS</h4>          
+          <h2>DESSERTS</h2>          
           <div class="compo_menu_texte">
             <div class="compo_menu_carte">
               <p class="compo_menu_choix">Pétales de violettes glacés</p>
@@ -191,7 +191,7 @@
   </div>
 
   <div class="commande">
-    <input class="btn" type="button" value="Commander" />
+    <input class="btn" type="button" value="Commander">
   </div>
 <!--################################## FOOTERT ##################################-->
   <footer>
